📝 Update 'What I've been up to lately'

--- a/src/content/blog/drafts/what-ive-been-up-to-lately/what-ive-been-up-to-lately.mdx
+++ b/src/content/blog/drafts/what-ive-been-up-to-lately/what-ive-been-up-to-lately.mdx
@@ -56,10 +56,11 @@ import {TwoUp} from '../../../../components';
 
 Historically, I've treated this blog as strictly a career-only outlet, focusing heavily on how-to type articles with the occasional philosophical article thrown in. My goal was to develop a personal brand and a following based on the content I produced. I've decided I want to shift how I use my site to be more representative of all of me, not _just_ my thoughts on code. This will make my blog less follow-able (because inevitably the variety will be a turn off to some folks), but I'm ok with that. I plan write more this year than in the last few years—you can expect:
 
-- Musings about what it's like to work remote (now that I'm coming up in 4 years in)
-- Thoughts about how to build lasting habits (and how that's been going for me)
+- More how-to articles about code, especially about some things I've learned at work (these will probably never go away)
+- Musings about what it's like to work remote (coming up on 4 years in!)
+- Thoughts about how to build lasting habits and how that's been going for me
 - Updates when I release more music
-- More how-to articles for things I've learned at work (these will probably never go away)
+- The occasional post that leans philosophical/religious
 
 If you enjoyed this post and want to follow along, I plan to post updates about my blog on [twitter](https://twitter.com/thetrevorharmon), [the RSS feed](https://thetrevorharmon.com/rss.xml), and [mailing list](https://thetrevorharmon.us18.list-manage.com/subscribe?u=564c646304e7c3dcd08710731&id=03c1d4d9de) (the mailing list is basically RSS to email).
 
