--- a/src/content/blog/drafts/displaying-mermaid-charts-in-gatsby/displaying-mermaid-charts-in-gatsby.mdx
+++ b/src/content/blog/drafts/displaying-mermaid-charts-in-gatsby/displaying-mermaid-charts-in-gatsby.mdx
@@ -7,11 +7,11 @@ status: Draft
 description: ''
 ---
 
-I like diagrams. I find they do a great job explaining my thought processes and giving a better understanding to what are often abstract systems. The problem I have with most diagrams (and diagramming tools() is that they often have a short shelf-life. Diagrams are often stored as flat files (e.g. a `.jpg`) and when the diagram becomes out of date, it becomes a chore to find the original, uncompressed file to edit it. The tooling is often gated by logins and licenses. It's also hard to describe differences between two different diagrams with a tool like git since the diagrams aren't stored as text.
+I like diagrams. I find they do a great job explaining my thought processes and giving a better understanding to what are often abstract systems. The problem I have with most diagrams (and diagramming tools) is that they often have a short shelf-life. Diagrams are typically stored as flat files (e.g. a `.jpg`) and when the diagram becomes out of date, it becomes a chore to find the original file to update it. Diagramming tooling is often gated by logins and licenses. Because the files aren't text, it's also hard to describe differences between an original diagram and an updated diagram with a tool like Git.
 
-In February 2022, GitHub [added support for diagrams with Mermaid](https://github.blog/2022-02-14-include-diagrams-markdown-files-mermaid/), a markdown-inspired diagramming and charting tool. GitHub's support of [Mermaid](https://mermaid.js.org/) introduced me to the tool, and I was thrilled when I discovered it–it solves the problem of needing a separate tool and is supported in a tool I already use on a regular basis. My coworkers can tell you that for a few months afterwards, I was _constantly_ making Mermaid diagrams (maybe simply because I could).
+In February 2022, GitHub [added support for diagrams with Mermaid](https://github.blog/2022-02-14-include-diagrams-markdown-files-mermaid/), a markdown-inspired diagramming and charting tool. GitHub's support of [Mermaid](https://mermaid.js.org/) introduced me to the tool, and I was thrilled when I discovered it. Mermaid solves the problems I had with diagramming tools, and because it uses text to describe a diagram, I can track changes with git. My coworkers can tell you that for a few months afterwards, I was _constantly_ making Mermaid diagrams (maybe simply because I could).
 
-I've wanted to start using diagrams in my writing on my blog, which meant I needed to add Mermaid support to my blog. However, I found that the existing tooling was a bit lacking and didn't suit my needs. I decided to roll up my sleeves and build support for it with my own plugin. In this article, I'll detail exactly how to build a plugin that transforms Mermaid syntax like this:
+I've wanted to start using diagrams in my writing on my blog, but I needed to first add support to it with my build tooling (Gatsby). However, I found that the existing tooling was a bit lacking and didn't suit my needs. I decided to roll up my sleeves and build support for it with the features I was looking for. In this article, I'll detail exactly how to build a Gatsby plugin that transforms Mermaid syntax like this:
 
 ```mermaid-code
 flowchart TD
@@ -35,19 +35,19 @@ flowchart TD
 
 ## gatsby-remark-mermaid
 
-My first instinct was to look at existing plugins, and I found that [gatsby-remark-mermaid](https://www.gatsbyjs.com/plugins/gatsby-remark-mermaid/) already existed. As I determined if this was the right approach, I learned a few things:
+I first went looking for existing options and found [gatsby-remark-mermaid](https://www.gatsbyjs.com/plugins/gatsby-remark-mermaid/). As I determined if this was the plugin I wanted to use, I learned a few things:
 
-- Mermaid needs to run in a chromium browser to determine the layout for a chart. The way that gatsby-remark-mermaid approaches this is by asking for the path to an instance of chromium. From there, it launches chromium in headless mode, lays out the chart, and returns the svg (or takes a screenshot to make an image/pdf). I originally thought this was a dealbreaker as I wanted a pure-CLI approach–though the solution I arrived at does something similar!
-- The plugin is a thin wrapper around [remark-mermaidjs](https://github.com/remcohaszing/remark-mermaidjs), and because of the way the plugin is implemented, it doesn't do any caching. I found this unnacceptable because rendering charts is slow–I wanted to render them once and then use a cached value any time I could.
+- Mermaid needs to run in a browser to render the layout for a diagram. gatsby-remark-mermaid requires a path to an instance of chromium (managed by the user, not by the plugin) and launches chromium in headless mode, lays out the chart, and returns the svg (or takes a screenshot to make an image/pdf). I originally thought this was a dealbreaker as I wanted a pure-CLI approach–though the solution I arrived at does something similar!
+- The plugin is a thin wrapper around [remark-mermaidjs](https://github.com/remcohaszing/remark-mermaidjs), and because of the way the plugin is implemented, it doesn't support caching. I found this unnacceptable because rendering charts is slow–I wanted to render them once and then use a cached value in subsequent renders.
 - remark-mermaidjs doesn't look specifically for the `mermaid` header, but instead renders the entire page and grabs the mermaid charts. I wanted something a little more precise.
 
 For these reasons, I decided to go looking for other solutions.
 
 ## mermaid-cli
 
-My goal was to find a command-line based tool to generate mermaid code to svg, which would enable me to integrate this as part of the Gatsby build process. I found [mermaid-cli](https://github.com/mermaid-js/mermaid-cli) which is a command line tool by the same folks who maintain mermaid.js. Instead of taking in a chromimum path, mermaid-cli includes puppeteer. Puppeteer downloads a chromium binary and uses that to do headless rendering, instead of using the local chromium installation.
+My goal was to find a command-line-based tool to render mermaid code to svg, which would enable me to integrate it as part of the Gatsby build process. I found [mermaid-cli](https://github.com/mermaid-js/mermaid-cli), a command line tool by the same folks who maintain mermaid.js. Instead of taking in a chromimum path, mermaid-cli utilizes puppeteer. Puppeteer downloads a chromium binary and uses that to do headless rendering, instead of using the local chromium installation.
 
-I started playing around with the tool and initial tried the [node style](https://github.com/mermaid-js/mermaid-cli#use-nodejs-api) approach:
+I started playing around with mermaid-cli and initially tried the [node style](https://github.com/mermaid-js/mermaid-cli#use-nodejs-api) approach:
 
 ```js
 import {run} from '@mermaid-js/mermaid-cli';
@@ -58,18 +58,18 @@ await run(
 );
 ```
 
-However, I couldn't seem to get that to work–it kept complaining about the file path. I moved on to the [local installation](https://github.com/mermaid-js/mermaid-cli#install-locally) approach:
+I couldn't seem to get this approach to work–it kept complaining about the file path. I moved on to the [local node module](https://github.com/mermaid-js/mermaid-cli#install-locally) approach:
 
 ```bash
 yarn add @mermaid-js/mermaid-cli
-./node_modules/.bin/mmdc -h
+./node_modules/.bin/mmdc -i input.mmd -o output.svg
 ```
 
 This approach worked and I was able to successfully convert a mermaid file to svg. 🎉
 
 ## Creating a local plugin
 
-Now that I had succesfully used mermaid-cli, I wanted to integrate it with my build and development process. The best tool for the job for this was to create a local gatsby plugin. Gatsby makes local plugin development really easy–you essentially just need to follow the [right project structure](https://www.gatsbyjs.com/docs/creating-a-local-plugin/#project-structure-for-a-local-plugin) and then your plugin "just works". I decided to follow the [Gatsby naming guidelines](https://www.gatsbyjs.com/docs/how-to/plugins-and-themes/naming-a-plugin/#:~:text=gatsby%2D%5Bplugin%2Dname%5D%2D*,remark%2Dadd%2Demoji%20) and name my plugin `gatsby-remark-mermaid-to-svg`. Then I needed to follow the right directory structure:
+Now that I had succesfully used mermaid-cli, I wanted to integrate it with my build and development process with a Gatsby plugin. Gatsby makes local plugin development really easy–you essentially just need to follow the [plugin guidelines](https://www.gatsbyjs.com/docs/creating-a-local-plugin/#project-structure-for-a-local-plugin) and then your plugin "just works". I decided to follow the [Gatsby naming conventions](https://www.gatsbyjs.com/docs/how-to/plugins-and-themes/naming-a-plugin/#:~:text=gatsby%2D%5Bplugin%2Dname%5D%2D*,remark%2Dadd%2Demoji%20) and name my plugin `gatsby-remark-mermaid-to-svg`. Then I followed the right directory structure:
 
 ```
 /thetrevorharmon.com
@@ -81,17 +81,13 @@ Now that I had succesfully used mermaid-cli, I wanted to integrate it with my bu
         └── index.mjs
 ```
 
-By following the right directory structure, I can add it to my config file with just the name and Gatsby will automatically pick up the local plugin and..._plug it in_ 😏...to my build process!
+By following this directory structure, I can add the plugin to my config file with just the name and Gatsby will automatically pick up the local plugin and..._plug it in_ 😏...to my build process!
 
 <Callout>
-  You'll notice that I said local plugin instead of community plugin. I don't
-  want the burden of maintaining a plugin for the community when I only need it
-  for my blog (which is a pretty narrow use case). However, if you are
-  passionate about this, please take this work and make it into a community
-  plugin!
+  You'll notice that I chose to make a local plugin instead of a community plugin. I don't want the burden of maintaining a plugin for the community when I only need it for my blog. However, if you're passionate about this, please take this work and make it into a community plugin!
 </Callout>
 
-As a starting point, I created a basic function that wraps the mermaid-cli:
+Now that I have the correct directory structure in place, we can start by creating a basic function that wraps mermaid-cli:
 
 ```js
 import fs from 'fs';
@@ -127,13 +123,13 @@ function generateSVGFromMermaid(mermaidText) {
 
 This function:
 
-1. Generates a new temporary filename with the [`uuid()`](https://github.com/uuidjs/uuid#readme) function. This ensures that I don't ever have naming collisions. Notice the `.mmd` file extension–that's the file extension that mermaid files use when they aren't embedded in a markdown document.
+1. Generates a new temporary filename with the [`uuid()`](https://github.com/uuidjs/uuid#readme) function. This ensures that I won't ever have naming collisions. Notice the `.mmd` file extension–that's the file extension for a standalone mermaid document.
 2. `mermaidText` describes the markup that defines a diagram–I need to write that to a local, temporary file.
 3. I assemble and execute a command against the `mmdc` binary. This dumps the result of the file into a `.svg` file.
 4. The results of the svg file are read into a string.
 5. Finally, we clean up the temporary files before returning the svg markup.
 
-Now that we have a function that can take in mermaid text and get back SVG, we need to write the plugin function. This will crawl the document and when it encounters a mermaid block, render it to an SVG. That function looks like this:
+With this function that can take in mermaid text and returns a svg, we need to write the plugin function to connect this to Gatsby. The function will crawl a markdown document and when it encounters a mermaid code block, render the block to an svg. Here's the plugin function:
 
 ```js
 import {visit} from 'unist-util-visit';
@@ -141,22 +137,21 @@ import {visit} from 'unist-util-visit';
 export function gatsbyRemarkMermaidToSvg({markdownAST}) {
   // 1
   visit(markdownAST, 'code', (node) => {
-    // 2
     if (node == null) {
       return;
     }
 
-    // 3
+    // 2
     if (node.lang === 'mermaid') {
       try {
         const svg = generateSVGFromMermaid(node.value);
 
-        // 4
+        // 3
         node.type = 'html';
         node.lang = undefined;
         node.value = `<div className="Mermaid">${svg}</div>`;
       } catch {
-        // 5
+        // 4
         console.error(
           'Could not convert mermaid to svg with value:',
           node.value,
@@ -164,7 +159,7 @@ export function gatsbyRemarkMermaidToSvg({markdownAST}) {
       }
     }
 
-    // 6
+    // 5
     if (node.lang === 'mermaid-code') {
       node.lang = 'mermaid';
       return;
@@ -177,16 +172,15 @@ export function gatsbyRemarkMermaidToSvg({markdownAST}) {
 
 Some details about this code:
 
-1. For my use case, I am parsing mermaid diagrams within the context of markdown. I suppose that you could also define a parser for JSX, but I'll only cover markdown. Gatsby exposes `markdownAST`, and we can use the `visit` function from [unist-util-visit](https://github.com/syntax-tree/unist-util-visit) to walk the tree. We are specifically looking for code nodes.
-2. I do a basic `null` check to appease typescript.
-3. If we encounter a node with the `mermaid` language, we've found what we're looking for.
-4. After generating the svg, we re-assign the type to `html`. This tells Gatsby to now render this node as html instead of as a code block (which also prevents other plugins from treating it like a code block). We also assign a new value to it that includes the newly-minted svg.
-5. If we encounter an error somewhere along the way, we log it and _don't_ change the type or value. This way we can still get a code block with syntax highlighting if the svg renderer fails.
-6. For cases where I want to write show mermaid markup, I've added this extra check that will rewrite `mermaid-code` as just `mermaid`–then plugins like [prismjs](https://www.gatsbyjs.com/plugins/gatsby-remark-prismjs/) can provide syntax highlighting.
+1. As I mentioned before, this parses mermaid diagrams within the context of markdown. I suppose that you could also define a parser for JSX, but this plugin will only work with markdown. Gatsby exposes a markdown as an abstract syntax tree called `markdownAST`, and we can use the `visit` function from [unist-util-visit](https://github.com/syntax-tree/unist-util-visit) to walk the tree. We are specifically looking for code nodes.
+1. If we encounter a node with the `mermaid` language, we've found what we're looking for.
+1. After generating the svg, we re-assign the type to `html`. This tells Gatsby to now render this node as html instead of as a code block (which also prevents other plugins from treating it like a code block). We also assign a new value to it that includes the newly-minted svg.
+1. If we encounter an error somewhere along the way, we log it and _don't_ change the type or value. This way we can still get a code block with syntax highlighting if the svg renderer fails.
+1. For cases where I want to show mermaid markup (instead of rendering an svg), I've added this extra check that will rewrite `mermaid-code` as just `mermaid`–then plugins like [prismjs](https://www.gatsbyjs.com/plugins/gatsby-remark-prismjs/) can provide syntax highlighting.
 
 ## Adding extensibility
 
-Now that we have a working plugin, let's add a little extensibility. Right now, we are stuck with the base Mermaid theme and font. We also can't customize anything about the markup. Let's add a few options to our function:
+Now that we have a working plugin, let's add a little extensibility. Right now, we are stuck with the base mermaid theme and font. We also can't customize anything about the markup. Let's add a few options to our function:
 
 ```js
 // 1
@@ -237,11 +231,11 @@ export function gatsbyRemarkMermaidToSvg({markdownAST}, pluginOptions) { // high
 I made the following changes:
 
 1. As with any sensible plugin, I'm defining default options that can be overriden in the Gatsby config file. You'll see how each of these are used in the code.
-2. The `pluginOptions` in the function is the object that is passed to the `options` key in the Gatsby config file.
-3. I take the options passed in and combine them with the defaults (as a fallback) so we have a complete config object.
-4. The `wrapperClassName` option is the classname of the div that wraps the svg—in this case, it defaults to `Mermaid`.
+1. The `pluginOptions` in the function is the object that is passed to the `options` key in a Gatsby config file.
+1. I take the options passed in and combine them with the defaults (as a fallback) so we always have a complete config object.
+1. The `wrapperClassName` option is the classname of the div that wraps the svg—in this case, it defaults to `Mermaid`.
 
-Now that we have options in our plugin, we can pass them through to our svg generator function:
+Now that we've added plugin options, we can pass them through to our svg generator function:
 
 ```js
 function generateSVGFromMermaid(mermaidText, options) { // highlight-line
@@ -296,8 +290,8 @@ function generateSVGFromMermaid(mermaidText, options) { // highlight-line
 Some details of this code:
 
 1. mermaid-cli requires us to pass in the options as a path to a file, so we stringify and save the mermaid options to a config file.
-2. In addition to the mermaid configuration options, mermaid-cli gives us an option for the background color of the rendered webpage (which I've set to `transparent`).
-3. I find the default mermaid styling to be a bit...lacking. Additionally, none of the themes match the theme of my blog. Unfortunately, mermaid-cli doesn't give us an option to opt out of the theme and always embeds the styles as part of the svg. I added a simple regex replace that removes anything between `<style>` tags so that I can provide my own without a bunch of `!important` statements everywhere.
+1. In addition to the mermaid configuration options, mermaid-cli gives us an option for the background color of the rendered webpage (which I've set to `transparent`).
+1. I find the default mermaid styling to be a bit...lacking. Additionally, none of the themes match the theme of my blog. Unfortunately, mermaid-cli doesn't give us an option to opt out of the theme and always embeds the styles as part of the svg. I added a simple regex replace that removes anything between `<style>` tags so that I can provide my own styles without a bunch of `!important` statements everywhere.
 
 ## Caching the generated svgs
 
